<resources>
    <string name="btn_broadcast">Broadcast</string>
    <string name="tally_box">Tally Box!</string>
    <string name="target_id">To:</string>
    <string name="amount">Amount:</string>
    <string name="empty">empty</string>
    <string name="title_activity_main_qr">MainActivity_QR</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">TallyBox</string>
    <string name="title_archive">Raw Transactions</string>
    <string name="title_followup">Transaction Process</string>
    <string name="title_about">About</string>
    <string name="title_history">Transactions History</string>
    <string name="title_history_detail">Transaction Detail</string>
    <string name="title_kyc">KYC</string>
    <string name="title_private_key">Private Key</string>
    <string name="title_receive">Receive</string>
    <string name="title_receive_qr">Receive by QR</string>
    <string name="title_send">Pay</string>
    <string name="title_send_scanner">Pay by Scanner</string>
    <string name="title_settings">Settings</string>
    <string name="title_terms">Terms</string>
    <string name="title_wallet_config">Config Wallet</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_archive">Archive</string>
    <string name="select_language">Select Language</string>
    <string name="action_private_key">Private Key</string>
    <string name="action_language">Language</string>
    <string name="action_kyc">KYC</string>
    <string name="action_setting">Settings</string>
    <string name="action_terms">Terms</string>
    <string name="action_about">About</string>
    <string name="wallet_password_local">Local password:</string>
    <string name="wallet_password">Password</string>
    <string name="wallet_password_2">Password re-enter</string>
    <string name="wallet_type">Wallet type:</string>
    <string name="wallet_new">New wallet</string>
    <string name="wallet_restore">Restore wallet</string>
    <string name="wallet_private_key">Private key</string>
    <string name="wallet_create">Create wallet</string>
    <string name="receive">Receive</string>
    <string name="send">Pay</string>
    <string name="app_is_up_to_date">Message: App is up-to-date...</string>
    <string name="advertise_text">-</string>
    <string name="follow_up">Process</string>
    <string name="follow_archive">Archive</string>
    <string name="follow_ignore">Ignore</string>
    <string name="follow_graph">Graph of Sign</string>
    <string name="follow_moment">Time of Sign</string>
    <string name="follow_moment_1">One raw transaction</string>
    <string name="follow_moment_2">has signed.</string>
    <string name="follow_currency">Token</string>
    <string name="follow_amount">Amount</string>
    <string name="last_update">Last update: <b>%1$s</b></string>
    <string name="last_update_label">Last update: </string>
    <string name="network_status_ok">Net: </string>
    <string name="network_status_error">Net: </string>
    <string name="archive_note">
        Raw transactions remain in your wallet and
        require processing and then follow‑up, unless you choose to ignore them.
        \n\n
        Archived raw transactions will be removed automatically after 7 days.
    </string>
    <string name="archive_empty">No archived transaction found.</string>
    <string name="follow_offline_sign">Offline</string>
    <string name="follow_online_sign">Online</string>
    <string name="follow_up_sign">Follow</string>
    <string name="follow_ods_pending">The raw transaction depended in queue</string>
    <string name="follow_ledger_exists">This transaction has registered and finalized in ledger</string>
    <string name="follow_note">
        Your raw transaction has been signed, is ready to upload and then follow up online.
        Just select your proper method.
    </string>
    <string name="followup_broadcast_msg">Broadcasting is in progress..</string>
    <string name="parcel_graph_from">Graph from</string>
    <string name="parcel_graph_to">Graph to</string>
    <string name="parcel_wallet_from">Wallet from</string>
    <string name="parcel_wallet_to">Wallet to</string>
    <string name="parcel_currency">Token</string>
    <string name="parcel_amount">Amount</string>
    <string name="parcel_order_id">Invoice</string>
    <string name="parcel_order_utc">Time stamp</string>
    <string name="parcel_order_sign">Sign</string>
    <string name="parcel_order_pubkey">Public Key</string>
    <string name="graph_info_placeholder">---</string>
    <string name="my_wallet">My wallet:</string>
    <string name="wallet_address_placeholder">---</string>
    <string name="point_of_sale">Point of Sale</string>
    <string name="token_label">Token:</string>
    <string name="select_token">Select Token</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_order_id_optional">Order ID (optional)</string>
    <string name="generate_qr_code">Generate QR Code (Receive Order)</string>
    <string name="hint_to_wallet">To wallet</string>
    <string name="at_label">To graph:</string>
    <string name="extra_info">Extra Info</string>
    <string name="offline_sign">Offline Sign</string>
    <string name="sign">Sign</string>
    <string name="sign_new">New Sign</string>
    <string name="broadcast">Broadcast</string>
    <string name="broadcast_report_placeholder">---</string>
    <string name="qr_code">QR Code</string>
    <string name="offline_raw_transaction_placeholder">---</string>
    <string name="offline_url_placeholder">---</string>
    <string name="offline_url_guide">Submit raw transaction here manually</string>
    <string name="history_network">Network: Connecting..</string>
    <string name="history_wait">please wait</string>
    <string name="history_in_graph">In Graph</string>
    <string name="history_transaction">Transaction</string>
    <string name="history_order_id">Order ID</string>
    <string name="history_channel">Channel</string>
    <string name="history_channel_concrete">Concrete</string>
    <string name="history_channel_safe">Safe</string>
    <string name="history_channel_caution">Caution</string>
    <string name="history_channel_dangerous">Dangerous</string>
    <string name="history_monitor">Secure Channel Monitor</string>
    <string name="history_detail_fee">Fee</string>
    <string name="history_detail_send">Sender</string>
    <string name="history_detail_receive">Receiver</string>
    <string name="history_detail_me">Me!</string>
    <string name="settings_zone">Zone filter:</string>
    <string name="settings_serial">Serial</string>
    <string name="settings_network">net</string>
    <string name="settings_uptodate">valid</string>
    <string name="settings_updated">updated</string>
    <string name="settings_checksum">checksum failed!</string>
    <string name="network_protocol_label">Network protocol:</string>
    <string name="connection_http">http</string>
    <string name="connection_https">https</string>
    <string name="pqc_label">Safeguard by PQC:</string>
    <string name="pqc_disable">disable</string>
    <string name="pqc_enable">enable</string>
    <string name="pqc_info_note">
    *Note: TallyBox has integrated ML-KEM, a cutting edge Post-Quantum Cryptography (PQC) algorithm into this app to evaluate its effectiveness. This feature prevents Man-in-the-Middle (MITM) attacks and receipt fraud.
    </string>
    <string name="local_password_label">Local password:</string>
    <string name="password_hint">Password</string>
    <string name="button_expose_private_key">Expose Private Key</string>
    <string name="qc_label">QC</string>
    <string name="privatekey_info_label">My private key:</string>
    <string name="privatekey_placeholder">---</string>
    <string name="privatekey_access_label">Last access:</string>
    <string name="privatekey_access_placeholder">---</string>
    <string name="kyc_info_placeholder">---</string>
    <string name="kyc_national_id_hint">National ID</string>
    <string name="kyc_mobile_number_hint">Mobile Number</string>
    <string name="kyc_request_button">Request KYC</string>
    <string name="kyc_message_hint">KYC Message</string>
    <string name="kyc_pin_hint">KYC PIN</string>
    <string name="kyc_sign_button">Sign</string>
    <string name="kyc_report_placeholder">---</string>
    <string name="kyc_request_msg">Requesting KYC code..</string>
    <string name="kyc_submit_msg">Submitting signed KYC..</string>
    <string name="about_version">version</string>
    <string name="about_version_new">new version</string>
    <string name="about_update_check">check for update</string>
    <string name="about_update_result">up to date!</string>
    <string name="tallybox_invite">Invite your friends</string>
    <string name="tallybox_about">
    Decent Tallybox open-source software is an innovative cryptocurrency wallet built on an enhanced Directed Acyclic Graph (DAG) protocol and a dual-token model consisting of fiat money and standard cryptocurrencies developed to simplify, educate, and make digital transactions more efficient. The decentralized TallyBox wallet is released under the GPL-3 open-source license:&lt;br/&gt;&lt;br/&gt;
    &lt;a href="https://github.com/mixoftix/decent_tallybox_android"&gt;github.com/mixoftix/decent_tallybox_android&lt;/a&gt;
    </string>
</resources>