<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="top"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_settings"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Menu Toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Layout Setting -->
        <!-- Network -->
        <TextView
            android:id="@+id/textview_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="10dp"
            android:text="@string/network_protocol_label"
            android:textSize="17sp" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/frame_white"
            >

            <!-- Connection -->
            <!-- Connection RadioGroup -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/RadioGroupConnection">

                <RadioButton
                    android:id="@+id/connection_http"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_http" />

                <RadioButton
                    android:id="@+id/connection_https"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/connection_https" />

            </RadioGroup>

        </LinearLayout>

        <!-- Safeguard -->
        <TextView
            android:id="@+id/textview_pqc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="10dp"
            android:text="@string/pqc_label"
            android:textSize="17sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/frame_white"
            >

            <!-- Safeguard -->
            <!-- Safeguard RadioGroup -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/RadioGroupPQC">

                <RadioButton
                    android:id="@+id/pqc_disable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pqc_disable" />

                <RadioButton
                    android:id="@+id/pqc_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pqc_enable" />

            </RadioGroup>

            <TextView
                android:id="@+id/textview_pqc_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/pqc_info_note"
                android:textStyle="italic"
                android:textSize="13sp" />

        </LinearLayout>

        <!-- Safeguard PQC Serials Here (Dynamically)-->

    </LinearLayout>

</ScrollView>